# python-project-49

./: .gitignore  Makefile  README.md  brain-calc-demo.cast  brain-even-demo.cast  brain-gcd-demo.cast  brain-prime-demo.cast  brain-progression-demo.cast  makefile  pyproject.toml
brain_games/: cli.py  game_engine.py  games_logic.py
brain_games/games/: brain_calc.py  brain_even.py  calc.py  calculus.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
