[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Module 1 final work"
authors = ["Anna Gorbacheva (aka Kahlan_Rahl) <annaseverus@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "all_brain_games.scripts.brain_games:main"
brain-even = "all_brain_games.scripts.brain_even:main"
brain-calc = "all_brain_games.scripts.brain_calc:main"
brain-gcd = "all_brain_games.scripts.brain_gcd:main"
brain-progression = "all_brain_games.scripts.brain_progression:main"
brain-prime = "all_brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
