[project]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of brain games implemented in Python"
authors = [
    {name = "KahlanRahl", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.1",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:play_even"
brain-calc = "brain_games.games.brain_calc:play_calc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]