[project]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of brain games implemented in Python"
authors = [
    {name = "KahlanRahl", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.1",
    "ruff>=0.1.0",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

# Конфигурация ruff добавляется в конец файла
[tool.ruff]
# Общие настройки ruff
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Настройки линтера
select = ["E", "F", "W", "I", "N", "B", "UP", "A", "C4", "ICN", "PIE", "PT", "SIM", "ARG", "PL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py